@@ -25,6 +25,7 @@ from Products.PloneMeeting.config import *
 ##code-section module-header #fill in your manual code here
 from OFS.ObjectManager import BeforeDeleteException
 from Products.CMFCore.utils import getToolByName
+from imio.helpers.cache import cleanVocabularyCacheFor
 from Products.PloneMeeting.utils import getCustomAdapter, getFieldContent
 from Products.PloneMeeting import PMMessageFactory
 ##/code-section module-header
@@ -148,15 +149,13 @@ class MeetingCategory(BaseContent, BrowserDefaultMixin):
     security.declarePrivate('at_post_create_script')
     def at_post_create_script(self):
         # clean cache for "Products.PloneMeeting.vocabularies.categoriesvocabulary"
-        tool = getToolByName(self, 'portal_plonemeeting')
-        tool.cleanVocabularyCacheFor("Products.PloneMeeting.vocabularies.categoriesvocabulary")
+        cleanVocabularyCacheFor("Products.PloneMeeting.vocabularies.categoriesvocabulary")
         self.adapted().onEdit(isCreated=True)
 
     security.declarePrivate('at_post_edit_script')
     def at_post_edit_script(self):
         # clean cache for "Products.PloneMeeting.vocabularies.categoriesvocabulary"
-        tool = getToolByName(self, 'portal_plonemeeting')
-        tool.cleanVocabularyCacheFor("Products.PloneMeeting.vocabularies.categoriesvocabulary")
+        cleanVocabularyCacheFor("Products.PloneMeeting.vocabularies.categoriesvocabulary")
         self.adapted().onEdit(isCreated=False)
 
     security.declarePrivate('manage_beforeDelete')
